[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/SpritesheetGuns.png" type="Texture" id=1]
[ext_resource path="res://Enemies/AI.gd" type="Script" id=2]
[ext_resource path="res://game_object_components/Health_Handler.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bullet_Box.gd" type="Script" id=4]
[ext_resource path="res://Player/Gun_Node.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 1 ) ],
"loop": false,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="CircleShape2D" id=6]
radius = 384.0

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Health_Handler" parent="." instance=ExtResource( 3 )]

[node name="Gun_Node" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Bullet_Box" type="Node" parent="Gun_Node"]
script = ExtResource( 4 )

[node name="ReloadTimer" type="Timer" parent="Gun_Node/Bullet_Box"]
one_shot = true

[node name="Gun_Delay" type="Node" parent="Gun_Node"]

[node name="Timer" type="Timer" parent="Gun_Node/Gun_Delay"]
wait_time = 0.8
one_shot = true

[node name="Bullet_Spawn" type="Position2D" parent="Gun_Node"]
position = Vector2( 24, 0 )

[node name="Bullet_Spawn2" type="Position2D" parent="Gun_Node"]
position = Vector2( 32, 0 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Detection_Zone" type="Area2D" parent="AI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/Detection_Zone"]
shape = SubResource( 6 )

[connection signal="timeout" from="Gun_Node/Bullet_Box/ReloadTimer" to="Gun_Node/Bullet_Box" method="_on_ReloadTimer_timeout"]
[connection signal="body_entered" from="AI/Detection_Zone" to="AI" method="_on_Detection_Zone_body_entered"]
